# distill-skill

./: .env.example  .gitignore  .gitnexusignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: README.md  index.html  package.json
docs/: README.md  architecture.md  business-value.md  idea.md  role-coverage.md  skill-pack.md
docs/mvp/: IMPLEMENTATION_REPORT.md  PROGRESS.md  README.md  architecture.md  artifact-representation.md  implementation.md  plan.md  scope.md  skill-pack-spec.md  validation.md
docs/research/: multi-role-extension.md  non-dev-signals.md  open-questions.md  prior-art-cross-industry.md  role-taxonomy.md  tacit-knowledge-capture.md
prompts/: extract.system.md  extract.user.md  synthesize.system.md
prompts/business-analyst/: extract.system.md  synthesize.system.md
prompts/mobile-dev/: extract.system.md  synthesize.system.md
prompts/shared/: extract.user.md
prompts/tester-manual/: extract.system.md  synthesize.system.md
scripts/: build_prompt.py  cluster.py  extract.py  ingest_confluence.py  ingest_gitlab.py  ingest_jira.py  init_db.py  link.py  score.py  synthesize.py  trace.py  validate.py
src/distill/: __init__.py  config.py  llm.py  schemas.py
src/distill_capture/: __init__.py  _common.py  ingest_confluence.py  ingest_gitlab.py  ingest_jira.py  link.py  redact.py
src/distill_core/: __init__.py  blob.py  cli.py  config.py  db.py  llm.py  prompts.py  roles.py
src/distill_distribute/: __init__.py  build_prompt.py  pack.py
src/distill_evolve/: __init__.py  artifact_cards.py  cluster.py  extract.py  score.py  synthesize.py  trace.py  validate.py
src/distill_web/: __init__.py  server.py  service.py
tests/: __init__.py  conftest.py
tests/capture/: __init__.py  test_confluence.py  test_gitlab.py  test_ingest_confluence.py  test_ingest_gitlab.py  test_ingest_jira.py  test_jira.py  test_link.py
tests/core/: __init__.py  test_blob.py  test_db.py  test_llm.py  test_prompts.py
tests/distribute/: __init__.py  test_build_prompt.py
tests/evolve/: __init__.py  test_artifact_cards.py  test_cluster.py  (+5 more)
validation/: blind_test_key.md  blind_test_packet.md  expert_review_rubric.md  mvp_report.md  self_use_log.md
(+20 files in other folders)
